--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "request": "^2.65.0",
     "requirejs": "^2.1.18",
     "serve-favicon": "^2.3.0",
+    "shortid": "^2.2.4",
+    "shortid32": "^0.1.0",
     "tracer": "^0.8.3",
     "twilio": "^2.9.0",
     "underscore": "*"
